Support newer jdk version when Compiling Bazel from Source without an existing Bazel binary
fix #18961

Closes #19125.

PiperOrigin-RevId: 553738828
Change-Id: Ic4504ef8f28cc264fcf80c898123ffb6ce5bd854